--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="bg-green-50">
-   {% include 'navbar.html' %}
+   {% include 'navbar.html' with logo='images/logo.js' %}
 
     <div class="container mx-auto mt-4">
         {% block content %}
