--- a/templates/core/book.html
+++ b/templates/core/book.html
@@ -1,6 +1,8 @@
 {% extends "_base.html" %}
 {% load custom_filters %}
 
+{% block title %} {{ book.title }} {% endblock %}
+
 {% block content %}
     <section class="bg-white dark:bg-gray-900">
         <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
@@ -94,7 +96,7 @@
     </section>
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-2 mx-auto">
-        <div class="text-center mb-20">
+        <div class="text-center mb-5">
           <h1 class="sm:text-2xl text-2xl font-medium text-center title-font text-gray-900 mb-4">Description</h1>
           <p class="text-base leading-relaxed mx-auto">{{ book.description }}</p>
         </div>
@@ -102,6 +104,6 @@
     </section>
 
     {% if request.user.is_authenticated %}
-        {% include 'core/components/addComment.html' %}
+        {% include 'core/components/comments.html' with comments=book|book_comments %}
     {% endif %}
 {% endblock %}
