--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
+{% load static %}
 <nav class="bg-green-50 border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-800">
         <div class="container flex flex-wrap items-center justify-between mx-auto">
           <a href="/" class="flex items-center">
-              <img src="https://i.ibb.co/6PG5J0w/logo.png" class="h-6 mr-3 sm:h-9" alt="share book" />
+              <img src="{% static 'images/logo.png' %}" class="h-6 mr-3 sm:h-9" alt="share book" />
           </a>
           <button data-collapse-toggle="mobile-menu" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
