--- a/templates/core/favorites.html
+++ b/templates/core/favorites.html
@@ -1,5 +1,6 @@
 {% extends '_base.html' %}
 {% load social_share %}
+{% load custom_filters %}
 
 {% block title %}
     	My Favorites
@@ -18,23 +19,25 @@
                   <a href="/book/{{ favorite.book.google_id }}">
                       <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="{{ favorite.book.thumbnail }}" alt="{{ favorite.book.title }}">
                   </a>
+                    {% with encodeUrl = favorite.book.google_id|encode_url %}
                   <ul class="flex justify-center mt-4 space-x-4">
                       <li>
-                          {% post_to_twitter '{{ favorite.book.title }}' 'http://localhost:8000/book/{{ favorite.book.google_id }}' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke="currentColor" d="M12.186 8.672 18.743.947h-2.927l-5.005 5.9-4.44-5.9H0l7.434 9.876-6.986 8.23h2.927l5.434-6.4 4.82 6.4H20L12.186 8.672Zm-2.267 2.671L8.544 9.515 3.2 2.42h2.2l4.312 5.719 1.375 1.828 5.731 7.613h-2.2l-4.699-6.237Z" clip-rule="evenodd"/></svg>' 'text-[#39569c] hover:text-dark-900 dark:hover:text-white mx-2' %}
+                          {% post_to_twitter '{{ favorite.book.title }}' 'encodeUrl' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke="currentColor" d="M12.186 8.672 18.743.947h-2.927l-5.005 5.9-4.44-5.9H0l7.434 9.876-6.986 8.23h2.927l5.434-6.4 4.82 6.4H20L12.186 8.672Zm-2.267 2.671L8.544 9.515 3.2 2.42h2.2l4.312 5.719 1.375 1.828 5.731 7.613h-2.2l-4.699-6.237Z" clip-rule="evenodd"/></svg>' 'text-[#39569c] hover:text-dark-900 dark:hover:text-white mx-2' %}
                       </li>
 
                       <li>
-                          {% post_to_facebook 'http://localhost:8000/book/{{ favorite.book.google_id }}' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">    <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd"/></svg>'  'text-[#39569c] hover:text-gray-900 dark:hover:text-white' %}
+                          {% post_to_facebook '{{ encodeUrl }}' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">    <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd"/></svg>'  'text-[#39569c] hover:text-gray-900 dark:hover:text-white' %}
                       </li>
 
                       <li>
-                          {% post_to_twitter '{{ favorite.book.title }}' 'http://localhost:8000/book/{{ favorite.book.google_id }}' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke="currentColor" d="M12.186 8.672 18.743.947h-2.927l-5.005 5.9-4.44-5.9H0l7.434 9.876-6.986 8.23h2.927l5.434-6.4 4.82 6.4H20L12.186 8.672Zm-2.267 2.671L8.544 9.515 3.2 2.42h2.2l4.312 5.719 1.375 1.828 5.731 7.613h-2.2l-4.699-6.237Z" clip-rule="evenodd"/></svg>' 'text-[#39569c] hover:text-blue-900 dark:hover:text-white mx-2' %}
+                          {% post_to_twitter '{{ favorite.book.title }}' 'encodeUrl' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke="currentColor" d="M12.186 8.672 18.743.947h-2.927l-5.005 5.9-4.44-5.9H0l7.434 9.876-6.986 8.23h2.927l5.434-6.4 4.82 6.4H20L12.186 8.672Zm-2.267 2.671L8.544 9.515 3.2 2.42h2.2l4.312 5.719 1.375 1.828 5.731 7.613h-2.2l-4.699-6.237Z" clip-rule="evenodd"/></svg>' 'text-[#39569c] hover:text-blue-900 dark:hover:text-white mx-2' %}
                       </li>
 
                       <li>
-                          {% post_to_twitter '{{ favorite.book.title }}' 'http://localhost:8000/book/{{ favorite.book.google_id }}' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke="currentColor" d="M12.186 8.672 18.743.947h-2.927l-5.005 5.9-4.44-5.9H0l7.434 9.876-6.986 8.23h2.927l5.434-6.4 4.82 6.4H20L12.186 8.672Zm-2.267 2.671L8.544 9.515 3.2 2.42h2.2l4.312 5.719 1.375 1.828 5.731 7.613h-2.2l-4.699-6.237Z" clip-rule="evenodd"/></svg>' 'text-[#39569c] hover:text-gray-900 dark:hover:text-white' %}
+                          {% post_to_twitter '{{ favorite.book.title }}' 'encodeUrl' '<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke="currentColor" d="M12.186 8.672 18.743.947h-2.927l-5.005 5.9-4.44-5.9H0l7.434 9.876-6.986 8.23h2.927l5.434-6.4 4.82 6.4H20L12.186 8.672Zm-2.267 2.671L8.544 9.515 3.2 2.42h2.2l4.312 5.719 1.375 1.828 5.731 7.613h-2.2l-4.699-6.237Z" clip-rule="evenodd"/></svg>' 'text-[#39569c] hover:text-gray-900 dark:hover:text-white' %}
                       </li>
                   </ul>
+                {% endwith %}
               </div>
               {% endfor %}
           </div>
