--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <nav class="bg-green-50 border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-800">
         <div class="container flex flex-wrap items-center justify-between mx-auto">
           <a href="/" class="flex items-center">
@@ -20,8 +21,8 @@
                     <!-- Dropdown menu -->
                     <div id="userDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                         <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
-                          <div>{{ user.get_username }}</div>
-                          <div class="font-medium truncate">{{ user.get_email }}</div>
+                          <div><strong>username : </strong>{{ user.get_username }}</div>
+                          <div class="font-medium truncate"><strong>email : </strong>{{ user.email }}</div>
                         </div>
                         <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
                           <li>
@@ -35,7 +36,7 @@
                           </li>
                         </ul>
                         <div class="py-1">
-                          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
+                          <a href="{% url 'logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
                         </div>
                     </div>
                 {% else %}
