--- a/templates/core/components/comments.html
+++ b/templates/core/components/comments.html
@@ -5,10 +5,11 @@
       <div class="flex justify-between items-center mb-6">
         <h2 class="text-lg lg:text-2xl font-bold text-gray-900 dark:text-white">Discussion ({{ comments|length }})</h2>
     </div>
-    <form class="mb-6">
+    <form class="mb-6" method="post" action="{% url 'add_comment' book_google_id=book.id %}">
+        {% csrf_token %}
         <div class="py-2 px-4 mb-4 bg-white rounded-lg rounded-t-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700">
-            <label for="comment" class="sr-only">Your comment</label>
-            <textarea id="comment" rows="6"
+            <label for="content" class="sr-only">Your comment</label>
+            <textarea id="content" rows="6" name="content"
                 class="px-0 w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
                 placeholder="Write a comment..." required></textarea>
         </div>
@@ -18,46 +19,78 @@
         </button>
     </form>
       {% for comment in comments %}
-      <article class="p-6 m-4 mb-4 text-base bg-white rounded-lg dark:bg-gray-900">
-        <footer class="flex justify-between items-center mb-2">
-            <div class="flex items-center px-3">
-                <p class="inline-flex items-center mr-3 ms-4 text-sm text-gray-900 dark:text-white font-semibold"><img
-                        class="w-6 h-6 rounded-full me-2"
-                        src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
-                        alt="Michael Gough">Michael Gough</p>
-                <p class="text-sm text-gray-600 dark:text-gray-400"><time pubdate datetime="2022-02-08"
-                        title="February 8th, 2022">Feb. 8, 2022</time></p>
-            </div>
-            <button id="dropdownComment1Button" data-dropdown-toggle="dropdownComment1"
-                class="inline-flex items-center p-2 text-sm font-medium text-center text-gray-500 dark:text-gray-400 bg-white rounded-lg hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-50 dark:bg-gray-900 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                type="button">
-                <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 3">
-                    <path d="M2 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm6.041 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM14 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Z"/>
-                </svg>
-                <span class="sr-only">Comment settings</span>
-            </button>
-            <!-- Dropdown menu -->
-            <div id="dropdownComment1"
-                class="hidden z-10 w-40 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
-                <ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
-                    aria-labelledby="dropdownMenuIconHorizontalButton">
-                    <li>
-                        <a href="#"
-                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Remove</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                            class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Report</a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
-        <p class="text-gray-500 dark:text-gray-400 px-3 py-2">{{ comment.content }}</p>
-    </article>
-    {% endfor %}
+           <article class="p-6 m-4 mb-4 text-base bg-white rounded-lg dark:bg-gray-900">
+              <footer class="flex justify-between items-center mb-2">
+                 <div class="flex items-center px-3 py-2">
+                    <p class="inline-flex items-center mr-3 ms-4 text-sm text-gray-900 dark:text-white font-semibold">
+                       <img class="w-6 h-6 rounded-full me-2"
+                          src="https://ui-avatars.com/api/?name={{ comment.user.username }}"
+                          alt="Michael Gough">{{ comment.user.username }}
+                    </p>
+                    <p class="text-sm text-gray-600 dark:text-gray-400">
+                       <time pubdate datetime="{{ comment.createdAt|date }}"
+                          title="{{ comment.createdAt|date }}">{{ comment.createdAt }}</time>
+                    </p>
+                 </div>
+                 {% if comment.user_id == user.id %}
+                    <button id="dropdownComment{{ comment.id }}Button"
+                       data-dropdown-toggle="dropdownComment{{ comment.id }}"
+                       class="inline-flex items-center p-2 text-sm font-medium text-center text-gray-500 dark:text-gray-400 bg-white rounded-lg hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-50 dark:bg-gray-900 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                       type="button">
+                       <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                          viewBox="0 0 16 3">
+                          <path
+                             d="M2 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm6.041 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM14 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Z" />
+                       </svg>
+                       <span class="sr-only">Comment settings</span>
+                    </button>
+                    <!-- Dropdown menu -->
+                    <div id="dropdownComment{{ comment.id }}"
+                       class="hidden z-10 w-40 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
+                       <ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
+                          aria-labelledby="dropdownMenuIconHorizontalButton">
+                          <li>
+                             <span style="cursor: pointer" onclick="editComment({{ comment.id }})"
+                                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</span>
+                          </li>
+                          <li>
+                             <a href="{% url 'remove_comment' comment_id=comment.id %}"
+                                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Remove</a>
+                          </li>
+                       </ul>
+                    </div>
+                 {% endif %}
+              </footer>
+              <div id="commentContent{{ comment.id }}" class="comment-content">
+                 <p class="text-gray-500 dark:text-gray-400 px-3 py-2">{{ comment.content }}</p>
+              </div>
+
+            <form class="mb-6" method="post" action="{% url 'update_comment' comment_id=comment.id %}">
+                {% csrf_token %}
+                <div class="hidden" id="editComment{{ comment.id }}">
+                    <div class="ms-2 me-2 py-2 px-2 mb-4 bg-green-200 rounded-lg rounded-t-lg border border-gray-200 dark:bg-green-800 dark:border-gray-700">
+                        <label for="content" class="sr-only">Your comment</label>
+                        <textarea id="content" rows="3" name="content"
+                            class="w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
+                            placeholder="Write a comment..." required>{{ comment.content }}</textarea>
+                    </div>
+                    <button type="submit"
+                        class="ms-2 mb-2 inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-green-700 rounded-lg focus:ring-4 focus:ring-green-200 dark:focus:ring-green-900 hover:bg-green-800">
+                        Update comment
+                    </button>
+                </div>
+            </form>
+           </article>
+        {% endfor %}
+        <script>
+            function editComment(commentId) {
+              const commentContent = document.getElementById(`commentContent${commentId}`);
+              const editCommentTextarea = document.getElementById(`editComment${commentId}`);
+
+              // Toggle visibility
+              commentContent.classList.toggle('hidden');
+              editCommentTextarea.classList.toggle('hidden');
+           }
+        </script>
   </div>
 </section>
